array to arrylist data structure

--- a/SG_Exp_Algo_V2_ForDeployment/config.properties
+++ b/SG_Exp_Algo_V2_ForDeployment/config.properties
@@ -3,9 +3,8 @@ user=thivyak
 connection=jdbc:mysql://10.0.106.63/thivyak
 password=LARCdata8963
 
-noOfRoutesPerK=2
 #Greedy, LS
-heuristic=Greedy
+heuristic=LS
 
 #algo setting
 scale =2
