Added service time, changed table name in db query, added method to reset field in user_info table

--- a/SG_Exp_Algo_V2_ForDeployment/config.properties
+++ b/SG_Exp_Algo_V2_ForDeployment/config.properties
@@ -1,6 +1,6 @@
 classname=com.mysql.jdbc.Driver
 user=thivyak
-connection=jdbc:mysql://10.0.106.63/thivyak
+connection=jdbc:mysql://10.0.106.63:3306/thivyak
 password=LARCdata8963
 
 #Greedy, LS
@@ -11,6 +11,7 @@ scale =2
 iterationToHalving=3
 dualityGapLimit=0.1
 noImprovementToStop=200
+servicetime=2;
 
 #no of ppl to assign for each task
 kCompletion=1
